# bmde

./: .aiexclude  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTORS  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  labeler.yml  release.yml  settings.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: codeql.yml  docs.yml  greetings.yml  labeler.yml  lint.yml  publish.yml  release.yml  stale.yml  test.yml
docs/: index.md  notes.txt
docs/components/: build.md  debug.md  edit.md  git.md  patch.md  run.md
docs/development/: architecture.md  installation.md
docs/getting-started/: CLI.md  host_components_installation.md  installation.md  prerequisites.md
scripts/: render-guide.py
src/bmde/: api.py  cli.py  shared_options.py
src/bmde/commands/check/: cli.py  command.py
src/bmde/commands/debug/: cli.py  command.py  service.py  settings.py  spec.py
src/bmde/commands/debug/backends/: backend.py  docker.py  host.py
src/bmde/commands/git/: cli.py  command.py  service.py  settings.py  spec.py
src/bmde/commands/git/backends/: backend.py  docker.py  host.py
src/bmde/commands/patch/: cli.py  command.py  service.py  settings.py  spec.py
src/bmde/commands/patch/backends/: backend.py  docker.py  host.py
src/bmde/commands/run/: cli.py  command.py  service.py  settings.py  spec.py
src/bmde/commands/run/backends/: backend.py  docker.py  flatpak.py  host.py
src/bmde/config/: command_settings.py  loader.py  logging_settings.py  schema.py  show_config.py
src/bmde/core/: backend.py  cli_global.py  docker.py  exec.py  logging.py  opts.py  os_utils.py  service.py  shared_options.py  spec.py  spec_opts.py  types.py
src/bmde/git/: command.py  service.py  spec.py
src/bmde/git/backends/: backend.py  base.py  docker.py  host.py
src/bmde/patch/: command.py  service.py  spec.py
src/bmde/patch/backends/: backend.py  base.py  docker.py  host.py
src/bmde/run/: command.py  service.py  spec.py
src/bmde/run/backends/: backend.py  docker.py  flatpak.py  host.py
tests/integration/: test_build_smoke.py  test_run_filesystem.py
tests/unit/: test_generics.py
