[project]
name = "bmde"
version = "1.0.0"
description = "CLI for NDS development for the practical exercises of Computers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="AleixMT"}]
license = {text="GPL-3.0-or-later"}
dependencies = [
  "typer",
  "pydantic",
]

[project.scripts]
bmde = "bmde.__main__:main"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
