[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bmde"
dynamic = ["version"]
description = "CLI for NDS development for the practical exercises of Computers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="AleixMT"}]
license = {text="GPL-3.0-or-later"}
dependencies = [
  "typer",
  "pydantic",
  "rtoml",
  "rich",
]

[project.scripts]
bmde = "bmde.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "pre-commit",
  "build"
]

[tool.hatch.version]
source = "vcs"

[tool.semantic_release]
version_source = "tag"
commit_version_number = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
