[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bmde"
dynamic = ["version"]
description = "Bare Metal Development Environment CLI; for NDS development for the practical exercises of Computers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="AleixMT"}]
license = {text="GPL-3.0-or-later"}
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "toml>=0.10.0",
    "docker>=6.0.0",
    "mkdocs-material>=9.0.0",
    "mkdocs>=1.5.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
bmde = "bmde.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "pre-commit",
  "build",
  "hatchling",
  "hatch-vcs"
]

[tool.hatch.version]
source = "vcs"

[tool.semantic_release]
version_source = "tag"
commit_version_number = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["ADDED", "UPDATED", "REMOVED", "FIXED", "RELEASED"]
minor_tags = ["ADDED", "UPDATED"]
patch_tags = ["FIXED", "REMOVED"]
major_tags = ["RELEASED"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
